k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermessages
  labels:
    app: usermessages
spec:
  selector:
    app: usermessages
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
