k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usermessages
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: usermessages
                port:
                  number: 8080
